# cornserve

./: .dockerignore  .gitignore  .gitmodules  404.html  CNAME  README.md  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: check_homepage_build.yaml  deploy_homepage.yaml  publish_pypi.yaml  push_docker.yaml  python_lint.yaml
architecture/: index.html
architecture/eric/: index.html
architecture/sidecar/: index.html
architecture/task/: index.html
contributor_guide/: index.html
contributor_guide/eric/: index.html
contributor_guide/kubernetes/: index.html
contributor_guide/sidecar/: index.html
contributor_guide/tracing/: index.html
docker/: dev.Dockerfile  eric.Dockerfile  example.Dockerfile  gateway.Dockerfile  resource-manager.Dockerfile  sidecar.Dockerfile  task-dispatcher.Dockerfile  task-manager.Dockerfile  vllm.Dockerfile
docs/: index.md  requirements.txt
docs/architecture/: cornserve.md  eric.md  index.md  sidecar.md  task.md
docs/assets/css/: extra.css
docs/contributor_guide/: eric.md  index.md  kubernetes.md  sidecar.md  tracing.md
docs/developer_guide/: eric.md  sidecar.md  tracing.md
docs/getting_started/: building_apps.md  cornserve.md  index.md  jupyter.ipynb  registering_apps.md
examples/: README.md  async_receiver.py  async_sender.py  notebook.ipynb  receiver.py  sender.py
examples/app/: register_app.py  requirements.txt  run.py  vlm.py
examples/mllm/: app.py  requirements.txt
getting_started/: index.html
getting_started/building_apps/: index.html
getting_started/cornserve/: index.html
getting_started/jupyter/: index.html
getting_started/registering_apps/: index.html
kubernetes/: README.md  registry.sh  set_registry.sh
kubernetes/k3s/: agent-config.yaml  registries.yaml  server-config.yaml
kubernetes/kustomize/base/: kustomization.yaml
kubernetes/kustomize/base/gateway/: service.yaml
kubernetes/kustomize/base/jaeger/: deployment.yaml  service.yaml
kubernetes/kustomize/base/resource-manager/: deployment.yaml  role-binding.yaml  role.yaml  service-account.yaml
kubernetes/kustomize/base/sidecar/: kustomization.yaml  role-binding.yaml  role.yaml  service.yaml  statefulset.yaml
kubernetes/kustomize/base/task-dispatcher/: deployment.yaml  service.yaml
kubernetes/kustomize/base/task-manager/: kustomization.yaml
kubernetes/kustomize/cornserve-system/base/: kustomization.yaml  namespace.yaml
kubernetes/kustomize/cornserve-system/base/jaeger/: configmap.yaml  deployment.yaml  service.yaml
kubernetes/kustomize/cornserve-system/overlays/dev/: kustomization.yaml
kubernetes/kustomize/cornserve/base/: kustomization.yaml  namespace.yaml
kubernetes/kustomize/overlays/dev/: image-pull-policy.yaml  kustomization.yaml
proto/v1/: comm_sidecar.proto  common.proto  resource_manager.proto  shard_manager.proto  sidecar.proto  task_dispatcher.proto  task_manager.proto  worker.proto
python/: pyproject.toml
python/cornserve/: __init__.py  cli.py  constants.py  frontend.py  logging.py  misc.py  tracing.py
python/cornserve/app/: __init__.py  base.py
python/cornserve/frontend/: __init__.py  app.py  tasks.py
python/cornserve/services/: __init__.py  utils.py
python/cornserve/services/gateway/: __init__.py  entrypoint.py  models.py  router.py  session.py  task_manager.py
python/cornserve/services/gateway/app/: manager.py  models.py  task_impl.py
python/cornserve/services/resource_manager/: __init__.py  entrypoint.py  grpc.py  manager.py  resource.py  server.py
python/cornserve/services/shard_manager/: server.py
python/cornserve/services/sidecar/: __init__.py  api.py  launch.py  receiver.py  scheduler.py  schema.py  sender.py  server.py  shm_manager.py  utils.py
python/cornserve/services/task_dispatcher/: __init__.py  dispatcher.py  entrypoint.py  grpc.py  models.py  router.py
python/cornserve/services/task_manager/: __init__.py  entrypoint.py  grpc.py  manager.py  models.py  server.py
python/cornserve/sidecar/: __init__.py  api.py  constants.py  schema.py  serde.py  utils.py
python/cornserve/task/: __init__.py  base.py  forward.py  registry.py
python/cornserve/task/builtins/: __init__.py  encoder.py  llm.py  mllm.py
python/cornserve/task_executors/: __init__.py  launch.py
python/cornserve/task_executors/descriptor/: __init__.py  base.py  registry.py
python/cornserve/task_executors/descriptor/builtins/: __init__.py  encoder.py  llm.py
python/cornserve/task_executors/eric/: __init__.py  api.py  config.py  entrypoint.py  schema.py
python/cornserve/task_executors/eric/distributed/: parallel.py  shm_broadcast.py  utils.py
python/cornserve/task_executors/eric/engine/: __init__.py  client.py  core.py  scheduler.py
python/cornserve/task_executors/eric/executor/: __init__.py  executor.py  loader.py  worker.py
python/cornserve/task_executors/eric/models/: __init__.py  base.py  gemma3.py  llava_onevision.py  qwen2_5_omni.py  qwen2_5_vl.py  qwen2_vl.py  registry.py
python/cornserve/task_executors/eric/models/layers/: __init__.py  activations.py  attention.py  linear.py  norm.py  siglip.py  vit.py
python/cornserve/task_executors/eric/router/: __init__.py  app.py  processor.py
python/cornserve/task_executors/eric/utils/: __init__.py  distributed.py  network.py  package.py  process.py  serde.py  zmq.py
python/scripts/: lint.sh
python/tests/services/: test_sidecar.py
python/tests/services/gateway/: example_vlm.py  test_app_manager.py
python/tests/services/sidecar/: test_sidecar.py  utils.py
python/tests/task/: test_base.py  test_registry.py
python/tests/task/builtins/: test_mllm.py
python/tests/task_executors/eric/: utils.py
python/tests/task_executors/eric/engine/: test_scheduler.py
python/tests/task_executors/eric/models/: conftest.py  test_gemma3.py  test_llava_onevision.py  test_qwen2_5_omni.py  test_qwen2_5_vl.py  test_qwen2_vl.py
scratchpad/: test_resource_manager.py
scratchpad/sidecar/: README.md  example.Dockerfile  receiver.py
scripts/: build-and-push-images.sh  build_export_images.sh  generate_pb.sh
search/: search_index.json
(+44 files in other folders)
